# chinochau

./: .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  LICENSE  Makefile  NOTES.md  README.md  app.py  migrate_database.py  pyproject.toml  pytest.ini
backend/: auth.py  auth_models.py  auth_routes.py  db.py  main.py  models.py
backend/core/: config.py  dependencies.py
backend/routes/: examples.py  flashcards.py  lists.py  translation.py
backend/services/: example_service.py  flashcard_service.py  list_service.py  translation_service.py
backend/tests/: README.md  conftest.py  test_database.py  test_examples.py  test_flashcards.py  test_lists.py  test_utilities.py
chinochau/: data.py  deepseek.py  service.py  test.py  translate_google.py
debugging/: admin_users.py  debug_users.py
frontend/: README.md  package-lock.json
frontend/.github/: copilot-instructions.md
frontend/src/: App.tsx
frontend/src/api/: auth.ts  flashcards.ts
frontend/src/components/: AddFlashcard.tsx  AuthForm.tsx  FlashcardList.tsx  FlashcardMenu.tsx  ProtectedRoute.tsx  StudyFlashcard.tsx  StudyPage.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx
streamlit/: app.py
tests/: test_data.py
