[tool.poetry]
name = "chinochau"
version = "0.1.0"
description = ""
authors = ["Carlos García Ling <carlos.gling@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pinyin = "^0.4.0"
googletrans = "^4.0.2"
streamlit = "^1.44.1"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
