[tool.poetry]
name = "chinochau"
version = "0.1.0"
description = ""
authors = ["Carlos García Ling <carlos.gling@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pinyin = "^0.4.0"
googletrans = "^4.0.2"
openai = "^1.75.0"
watchdog = "^6.0.0"
sqlalchemy = "^2.0.30"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
langchain-core = "^0.3.60"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
